# ai-agent

./: .env.example  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: feature.agent.md  review.agent.md
.github/instructions/: dependencies.instructions.md  docs.instructions.md  python.instructions.md  testing.instructions.md
.github/prompts/: session-start.prompt.md
.github/workflows/: ci.yml
src/ai_agent/: README.md  __init__.py
src/ai_agent/adapters/: README.md  __init__.py
src/ai_agent/adapters/llm/: README.md  __init__.py  openai.py
src/ai_agent/core/: README.md  __init__.py  agent.py
src/ai_agent/core/exceptions/: README.md  __init__.py
src/ai_agent/core/factories/: README.md  __init__.py  agent.py  conversation.py  llm.py  strategy.py  tool.py
src/ai_agent/core/models/: README.md  __init__.py  agent.py  budget.py  config.py  llm.py  message.py  run.py  state.py  strategy.py  tool.py
src/ai_agent/core/protocols/: README.md  __init__.py  agent.py  llm.py  logger.py  strategy.py  tool.py
src/ai_agent/core/registries/: README.md  __init__.py  agent.py  llm.py  tool.py
src/ai_agent/core/services/: README.md  __init__.py  agent.py  compaction.py  conversation.py  run.py  tool.py
src/ai_agent/core/strategies/: README.md  base.py  (+2 more)
tests/: conftest.py
tests/live/: conftest.py
tests/live/adapters/: conftest.py
tests/mock/: conftest.py
tests/mock/adapters/: conftest.py
tests/mock/core/: conftest.py
tests/unit/: conftest.py
tests/unit/core/: conftest.py
(+51 files in other folders)
